dts: rockpi-4b-linux: light up the USER_LED2 led
Signed-off-by: Stephen <stephen@vamrs.com>

--- a/arch/arm/dts/rockpi-4b-linux.dts
+++ b/arch/arm/dts/rockpi-4b-linux.dts
@@ -41,6 +41,8 @@
 	vccsys: vccsys {
 		compatible = "regulator-fixed";
 		regulator-name = "vccsys";
+		enable-active-high;
+		gpio = <&gpio3 29 GPIO_ACTIVE_HIGH>;// light up the red led
 		regulator-boot-on;
 		regulator-always-on;
 	};
