Macaddr derived from cpuid for RK3308
(cherry picked from commit 9f82c7226c738ea5b659ea37337b20be6ce59c67)
Signed-off-by: Stephen <stephen@vamrs.com>

--- a/configs/rockpi-s-rk3308_defconfig
+++ b/configs/rockpi-s-rk3308_defconfig
@@ -66,6 +66,8 @@ CONFIG_DEBUG_UART_CLOCK=24000000
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_DEBUG_UART_SKIP_INIT=y
 CONFIG_SYSRESET=y
+CONFIG_MISC=y
+CONFIG_ROCKCHIP_OTP=y
 CONFIG_USB=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DWC2_OTG=y
