--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -56,6 +56,7 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3399-puma-ddr1333.dtb \
 	rk3399-puma-ddr1600.dtb \
 	rk3399-puma-ddr1866.dtb \
+	rk3399pro-rockpi-n10-linux.dtb \
 	rockpi-4a-linux.dtb \
 	rockpi-4b-linux.dtb \
 	rockpi-4c-linux.dtb \
