--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1130,6 +1130,8 @@ config ARCH_ROCKCHIP
 	select DM_PWM
 	select DM_REGULATOR
 	select CMD_ROCKUSB if USB_GADGET_DOWNLOAD
+	select OF_LIBFDT
+	select OF_LIBFDT_OVERLAY
 	select ENABLE_ARM_SOC_BOOT0_HOOK
 	select SYS_NS16550
 	select SKIP_RELOCATE_UBOOT if !ARM64
