evb-rk3288_defconfig:enable CONFIG_SHA256
Signed-off-by: brian <brian@vamrs.com>

--- a/configs/evb-rk3288_defconfig
+++ b/configs/evb-rk3288_defconfig
@@ -91,4 +91,5 @@ CONFIG_DRM_ROCKCHIP_LVDS=y
 CONFIG_DRM_ROCKCHIP_RGB=y
 CONFIG_USE_TINY_PRINTF=y
 CONFIG_CMD_DHRYSTONE=y
+CONFIG_SHA256=y
 CONFIG_ERRNO_STR=y
